--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="../Css/gallery.css">
+    <link rel="stylesheet" href="../Css/navbar.css">
 </head>
 <body>
+    <!-- <header>
+        <div class="logo">
+          <a href="index.html"><img src="LF logo.png" alt="Logo"></a>
+        </div>
+        <nav>
+          <ul class="nav-links">
+            <li><a href="Pages/events.html"><button><span>Events</span></button></a></li>
+            <li><a href="Pages/performers.html"><button><span>Performers</span></button></a></li>
+            <li><a href="Pages/gallery.html"><button><span>Gallery</span></button></a></li>
+            <li><a href="Pages/contact.html"><button><span>Contact</span></button></a></li>
+          </ul>
+        </nav>
+      </header> -->
     <div class="slider">
         <div class="list">
             <div class="item active">
