--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Le Fiestus</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="Css/countdown.css">
   <link rel="icon" type="image/x-icon" href="LF logo.jpg">
 </head>
 <body>
@@ -31,6 +32,7 @@
           <h2>BE the part</h2>
         </div>
       </section>
+      
     </main>
     <img src="https://assets.codepen.io/1149983/mountain-lines.svg" class="mountain-lines" alt="image of mountain contour lines for decorative purposes only over the main landing area" />
     <!-- Video element for background -->
@@ -39,6 +41,8 @@
       <!-- Add additional source elements for other video formats if needed -->
     </video>
   </div> 
+  
+  
   <script>
     let docTitle = document.title;
     window.addEventListener("blur", () => {
