--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -8,19 +8,20 @@
     <link rel="stylesheet" href="../Css/navbar.css">
 </head>
 <body>
-    <!-- <header>
+ <header>
         <div class="logo">
-          <a href="index.html"><img src="LF logo.png" alt="Logo"></a>
+          <a href="../index.html"><img src="../LF logo.png" alt="Logo"></a>
         </div>
         <nav>
           <ul class="nav-links">
-            <li><a href="Pages/events.html"><button><span>Events</span></button></a></li>
-            <li><a href="Pages/performers.html"><button><span>Performers</span></button></a></li>
-            <li><a href="Pages/gallery.html"><button><span>Gallery</span></button></a></li>
-            <li><a href="Pages/contact.html"><button><span>Contact</span></button></a></li>
+            <li><a href="../Pages/events.html"><button><span>Events</span></button></a></li>
+            <li><a href="../Pages/performers.html"><button><span>Performers</span></button></a></li>
+            <li><a href="../Pages/gallery.html"><button><span>Gallery</span></button></a></li>
+            <li><a href="../Pages/contact.html"><button><span>Contact</span></button></a></li>
           </ul>
         </nav>
-      </header> -->
+      </header>
+      <section>
     <div class="slider">
         <div class="list">
             <div class="item active">
@@ -87,6 +88,7 @@
             </div>
         </div>
     </div>
+</section>
     
     
 
