--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Le Fiestus</title>
-  <link rel="stylesheet" href="index.css">
+  
   <link rel="stylesheet" href="Css/countdown.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/x-icon" href="LF logo.jpg">
 </head>
 <body>
@@ -40,7 +41,67 @@
       <source src="teaser-lf.mp4" type="video/mp4">
       <!-- Add additional source elements for other video formats if needed -->
     </video>
-  </div> 
+  </div>
+  <section>
+    <main>
+    <h1>WE'RE LAUNCHING SOON</h1>
+      <div class="countdown">
+        <div class="frame">
+          <div class="top" unit="days">
+            <div class="wrapper" unit="days">
+              <div id="days-top"></div>
+            </div>
+          </div>
+          <div class="bottom" unit="days">
+            <div id="days-bottom"></div>
+          </div>
+          <div class="dot"></div>
+          <div class="dot right"></div>
+        </div>
+        <div class="frame">
+          <div class="top" unit="hours">
+            <div class="wrapper" unit="hours">
+              <div id="hours-top"></div>
+            </div>
+          </div>
+          <div class="bottom" unit="hours">
+            <div id="hours-bottom"></div>
+          </div>
+          <div class="dot"></div>
+          <div class="dot right"></div>
+        </div>
+        <div class="frame">
+          <div class="top" unit="minutes">
+            <div class="wrapper" unit="minutes">
+              <div id="minutes-top"></div>
+            </div>
+          </div>
+          <div class="bottom" unit="minutes">
+            <div id="minutes-bottom"></div>
+          </div>
+          <div class="dot"></div>
+          <div class="dot right"></div>
+        </div>
+        <div class="frame">
+          <div class="top" unit="seconds">
+            <div class="wrapper" unit="seconds">
+              <div id="seconds-top"></div>
+            </div>
+          </div>
+          <div class="bottom" unit="seconds">
+            <div id="seconds-bottom"></div>
+          </div>
+          <div class="dot"></div>
+          <div class="dot right"></div>
+        </div>
+        <div class="unit-label">DAYS</div>
+        <div class="unit-label">HOURS</div>
+        <div class="unit-label">MINUTES</div>
+        <div class="unit-label">SECONDS</div>
+      </div>
+    </main>
+  </section> 
+  <script defer src="../Js/countdown.js"></script>
   
   
   <script>
