--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Le Fiestus</title>
   
   <link rel="stylesheet" href="Css/countdown.css">
+  <link rel="stylesheet" href="Css/footer.css">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/x-icon" href="LF logo.jpg">
 </head>
@@ -42,6 +43,8 @@
       <!-- Add additional source elements for other video formats if needed -->
     </video>
   </div>
+  
+  <div class="container-theme">
   <section>
     <main>
     <h1>WE'RE LAUNCHING SOON</h1>
@@ -100,9 +103,123 @@
         <div class="unit-label">SECONDS</div>
       </div>
     </main>
-  </section> 
+  </section>
+</div> 
+<footer class="footer-content">
+  <div class="footer-wrapper">
+    <div class="footer-links-wrapper">
+    <div></div>
+    <div class="jyc-tmp">
+      <div class="jyc">
+      <div class="logojyc">
+        <img class="footer-logojyc" src="Images/logojyc.png" alt="JYC Logo" />
+      </div>
+      <div class="jyc-text">
+        JUIT Youth Club (JYC) is the name <br />
+        of enthusiasm, development, <br /> consistency and effort.
+      </div>
+      </div>
+      <div class="tmp">
+      <div class="logotmp">
+        <img class="footer-logotmp" src="Images/logotmp.png" alt="TMP Logo" />
+      </div>
+      <div class="tmp-text">
+        Managed by Technical <br /> Sciences, Movies and <br /> Photography club
+      </div>
+      </div>
+    </div>
+    <hr />
+    <div class="links-wrapper-1">
+      <div class="footer-heading">
+      <div class="footer-heading-m">CLUBS</div>
+      </div>
+      <ul>
+      <li class="tsmp">
+        <a href="#">Technical Sciences, Movies and Photography</a>
+      </li>
+      <li class="eeh">
+        <a href="#">Environment, Ecology and Health</a>
+      </li>
+      <li class="lad">
+        <a href="#">Literary and Debating</a>
+      </li>
+      <li class="tam">
+        <a href="#">Theater and Music</a>
+      </li>
+      <li class="cad">
+        <a href="#">Cultural and Dance</a>
+      </li>
+      <li class="sports">
+        <a href="#">Sports</a>
+      </li>
+      <li class="koshish">
+        <a href="#">Koshish</a>
+      </li>
+      </ul>
+    </div>
+    <hr />
+    <div class="links-wrapper-2">
+      <div class="footer-heading">
+      <div class="footer-heading-m">COMMITTEES</div>
+      </div>
+      <ul>
+      <li class="pem">
+        <a href="#">Procurement and Event Management</a>
+      </li>
+      <li class="rah">
+        <a href="#">Registration and Hospitality</a>
+      </li>
+      <li class="map">
+        <a href="#">Media and Publicity</a>
+      </li>
+      <li class="ca">
+        <a href="#">Creative Arts</a>
+      </li>
+      <li class="dispi">
+        <a href="#">Disciplinary</a>
+      </li>
+      <li class="money">
+        <a href="#">Finance</a>
+      </li>
+      </ul>
+    </div>
+    <hr />
+    <div class="links-wrapper-3">
+      <div class="footer-heading">
+      <div class="footer-heading-m">CONTACT US</div>
+      </div>
+      <ul>
+      <li class="jyc-president-email">
+        <a href="mailto:president.jyc@juitsolan.in">JYC President - president.jyc@juitsolan.in</a>
+      </li>
+      <li class="support-email">
+        <a href="mailto:technicalclub.jyc@juitsolan.in">Support - tehcnicalclub.jyc@juitsolan.in</a>
+      </li>
+      <li class="juit-address">
+        <a href="//www.google.com/maps/place/Jaypee+University+of+Information+Technology/@31.0154348,77.0663199,15.87z/data=!4m5!3m4!1s0x39057db24364e085:0x4f4fefd65caa0317!8m2!3d31.016551!4d77.070159">
+        Address - Waknaghat, P.O. Waknaghat, Teh Kandaghat, Distt.
+        Solan PIN-173 234 (H.P.), India
+        </a>
+      </li>
+      </ul>
+    </div> 
+    <div class="footer-bottom">
+    <div class="copyright">
+      Copyright &copy; 2023 JYC All rights reserved.
+    </div>
+    <div class="social-icons">
+      <a href="https://instagram.com/jyc.technical.club?igshid=NjIwNzIyMDk2Mg=="><i class="fa fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/company/technical-sciences-movies-photography-club-jyc/about/"><i class="fa fa-linkedin"></i></a>
+    </div>
+    <!-- <div class="footer-option-name">
+      <a href="/teams">Team</a> |
+      <a href="/page-under-construction">Certification</a>
+      <a href="//www.google.com">| Login</a>
+    </div> -->
+    </div>
+  </div>
+  </footer>
   <script defer src="../Js/countdown.js"></script>
-  
   
   <script>
     let docTitle = document.title;
@@ -112,6 +229,21 @@
     window.addEventListener("focus", () => {
       document.title = docTitle;
     });
+  </script>
+  <script>
+    let prevScrollpos = window.pageYOffset;
+const header = document.querySelector("header");
+
+window.onscroll = function() {
+  let currentScrollPos = window.pageYOffset;
+  if (currentScrollPos <= 30) {
+    header.classList.add("header-visible");
+  } else {
+    header.classList.remove("header-visible");
+  }
+  prevScrollpos = currentScrollPos;
+}
+
   </script>
   
 </body>
