--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../Css/contact.css">
   <link rel="stylesheet" href="../Css/navbar.css">
   <link rel="stylesheet" href="../Css/footer.css">
-  <link rel="icon" type="image/x-icon" href="../LF-logo.jpg">
+  <link rel="icon" type="image/x-icon" href="../LF logo.jpg">
 </head>
 <body>
   <div class="container">
@@ -31,7 +31,7 @@
       <div class="jyc-tmp">
         <div class="jyc">
         <div class="logojyc">
-          <img class="footer-logojyc" src="Images/logojyc.png" alt="JYC Logo" />
+          <img class="footer-logojyc" src="../Images/logojyc.png" alt="JYC Logo" />
         </div>
         <div class="jyc-text">
           JUIT Youth Club (JYC) is the name <br />
@@ -40,7 +40,7 @@
         </div>
         <div class="tmp">
         <div class="logotmp">
-          <img class="footer-logotmp" src="Images/logotmp.png" alt="TMP Logo" />
+          <img class="footer-logotmp" src="../Images/logotmp.png" alt="TMP Logo" />
         </div>
         <div class="tmp-text">
           Managed by Technical <br /> Sciences, Movies and <br /> Photography club
