--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -6,7 +6,7 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="../Css/gallery.css">
     <link rel="stylesheet" href="../Css/navbar.css">
-    <link rel="icon" type="image/x-icon" href="../LF-logo.jpg">
+    <link rel="icon" type="image/x-icon" href="../LF logo.jpg">
 </head>
 <body>
  <header>
