--- a/Pages/performers.html
+++ b/Pages/performers.html
@@ -6,7 +6,7 @@
   <title>Le Fiestus</title>
   <link rel="stylesheet" href="../Css/performers.css">
   <link rel="stylesheet" href="../Css/navbar.css">
-  <link rel="icon" type="image/x-icon" href="../LF-logo.jpg">
+  <link rel="icon" type="image/x-icon" href="../LF logo.jpg">
 </head>
 <body>
   <header>
