--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -26,35 +26,70 @@
     <div class="slider">
         <div class="list">
             <div class="item active">
-                <img src="../Images/image3.webp">
+                <img src="../Images/IMG_0243_37_11zon.webp">
                 <div class="content">
                     <p></p>
                     <h2></h2>
                 </div>
             </div>
             <div class="item">
-                <img src="../Images/image1.webp">
+                <img src="../Images/DSC_0061_4_11zon.webp">
                 <div class="content">
                     <p></p>
                     <h2></h2>
                 </div>
             </div>
             <div class="item">
-                <img src="../Images/image2.webp">
+                <img src="../Images/DSC_0010_1_11zon.webp">
                 <div class="content">
                     <p></p>
                     <h2></h2>
                 </div>
             </div>
             <div class="item">
-                <img src="../Images/image11.webp">
+                <img src="../Images/DSC_0125_8_11zon.webp">
                 <div class="content">
                     <p></p>
                     <h2></h2>
                 </div>
             </div>
             <div class="item">
-                <img src="../Images/image4.webp">
+                <img src="../Images/IMG_0261_39_11zon.webp">
+                <div class="content">
+                    <p></p>
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../Images/DSC_0490_20_11zon.webp">
+                <div class="content">
+                    <p></p>
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../Images/DSC_0304_12_11zon.webp">
+                <div class="content">
+                    <p></p>
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../Images/DSC_0345_14_11zon.webp">
+                <div class="content">
+                    <p></p>
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../Images/IMG_0460_47_11zon.webp">
+                <div class="content">
+                    <p></p>
+                    <h2></h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="../Images/IMG_4470_52_11zon.webp">
                 <div class="content">
                     <p></p>
                     <h2></h2>
@@ -68,23 +103,43 @@
         
         <div class="thumbnail">
             <div class="item active">
-                <img src="../Images/image3.webp">
+                <img src="../Images/IMG_0243_37_11zon.webp">
                 <div class="content"></div>
             </div>
             <div class="item">
-                <img src="../Images/image1.webp">
+                <img src="../Images/DSC_0061_4_11zon.webp">
                 <div class="content"></div>
             </div>
             <div class="item">
-                <img src="../Images/image2.webp">
+                <img src="../Images/DSC_0010_1_11zon.webp">
                 <div class="content"></div>
             </div>
             <div class="item">
-                <img src="../Images/image11.webp">
+                <img src="../Images/DSC_0125_8_11zon.webp">
                 <div class="content"></div>
             </div>
             <div class="item">
-                <img src="../Images/image4.webp">
+                <img src="../Images/IMG_0261_39_11zon.webp">
+                <div class="content"></div>
+            </div>
+            <div class="item">
+                <img src="../Images/DSC_0490_20_11zon.webp">
+                <div class="content"></div>
+            </div>
+            <div class="item">
+                <img src="../Images/DSC_0304_12_11zon.webp">
+                <div class="content"></div>
+            </div>
+            <div class="item">
+                <img src="../Images/DSC_0345_14_11zon.webp">
+                <div class="content"></div>
+            </div>
+            <div class="item">
+                <img src="../Images/IMG_0460_47_11zon.webp">
+                <div class="content"></div>
+            </div>
+            <div class="item">
+                <img src="../Images/IMG_4470_52_11zon.webp">
                 <div class="content"></div>
             </div>
         </div>
