--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="container-theme">
   <section>
     <main>
-    <h1>WE'RE LAUNCHING SOON</h1>
+    <!-- <h1>WE'RE LAUNCHING SOON</h1> -->
       <div class="countdown">
         <div class="frame">
           <div class="top" unit="days">
@@ -97,10 +97,10 @@
           <div class="dot"></div>
           <div class="dot right"></div>
         </div>
-        <div class="unit-label">DAYS</div>
+        <!-- <div class="unit-label">DAYS</div>
         <div class="unit-label">HOURS</div>
         <div class="unit-label">MINUTES</div>
-        <div class="unit-label">SECONDS</div>
+        <div class="unit-label">SECONDS</div> -->
       </div>
     </main>
   </section>
