--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   
   <link rel="stylesheet" href="Css/countdown.css">
   <link rel="stylesheet" href="Css/footer.css">
+  <link rel="stylesheet" href="Css/contact.css">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/x-icon" href="LF logo.jpg">
 </head>
@@ -20,7 +21,7 @@
         <li><a href="Pages/events.html"><button><span>Events</span></button></a></li>
         <li><a href="Pages/performers.html"><button><span>Performers</span></button></a></li>
         <li><a href="Pages/gallery.html"><button><span>Gallery</span></button></a></li>
-        <li><a href="Pages/contact.html"><button><span>Contact</span></button></a></li>
+        <li><a href="#contact"><button><span>Contact</span></button></a></li>
       </ul>
     </nav>
   </header>
@@ -104,7 +105,29 @@
       </div>
     </main>
   </section>
-</div> 
+<section class="contact" id="contact">
+  <div class="max-w-md mx-auto py-8"> <!-- Added mx-auto class -->
+    <h2 class="text-3xl font-bold text-center text-zinc-800 dark:text-white mb-6">Contact Us</h2>
+    <div class="space-y-4">
+      <div class="bg-cyan-500 p-4 rounded-lg shadow-lg">
+        <h3 class="text-lg text-white font-semibold mb-2">Contact Address</h3>
+        <p class="text-white text-opacity-90 text-sm">Jaypee University of Information Technology,Waknaghat, P.O. Waknaghat, Teh Kandaghat, Distt. Solan PIN-173 234 (H.P.), India</p>
+      </div>
+      <div class="bg-pink-500 p-4 rounded-lg shadow-lg">
+        <h3 class="text-lg text-white font-semibold mb-2">Contact Number</h3>
+        <p class="text-white text-opacity-90 text-sm">9793026309 Shivansh Mehrotra (JYC President) </p>
+        <p class="text-white text-opacity-90 text-sm">8787085222 Ashish (Events Co-ordinator) </p>
+      </div>
+      <div class="bg-red-500 p-4 rounded-lg shadow-lg">
+        <h3 class="text-lg text-white font-semibold mb-2">Email</h3>
+        <p class="text-white text-opacity-90 text-sm">president.jyc@juitsolan.in</p>
+        <p class="text-white text-opacity-90 text-sm">rohan0009u@gmail.com</p>
+      </div>
+      </div>
+    </div>
+  </div>
+</section> 
+</div>
 <footer class="footer-content">
   <div class="footer-wrapper">
     <div class="footer-links-wrapper">
