--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -18,7 +18,7 @@
             <li><a href="../Pages/events.html"><button><span>Events</span></button></a></li>
             <li><a href="../Pages/performers.html"><button><span>Performers</span></button></a></li>
             <li><a href="../Pages/gallery.html"><button><span>Gallery</span></button></a></li>
-            <li><a href="../Pages/contact.html"><button><span>Contact</span></button></a></li>
+            <li><a href="../index.html#contact"><button><span>Contact</span></button></a></li>
           </ul>
         </nav>
       </header>
