--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="Css/contact.css">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/x-icon" href="LF logo.jpg">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
+
 </head>
 <body>
   <header>
@@ -111,17 +113,17 @@
     <div class="space-y-4">
       <div class="bg-cyan-500 p-4 rounded-lg shadow-lg">
         <h3 class="text-lg text-white font-semibold mb-2">Contact Address</h3>
-        <p class="text-white text-opacity-90 text-sm">Jaypee University of Information Technology,Waknaghat, P.O. Waknaghat, Teh Kandaghat, Distt. Solan PIN-173 234 (H.P.), India</p>
+        <p class="text-white text-opacity-90 text-sm lowercase">Jaypee University of Information Technology,Waknaghat, P.O. Waknaghat, Teh Kandaghat, Distt. Solan PIN-173 234 (H.P.), India</p>
       </div>
       <div class="bg-pink-500 p-4 rounded-lg shadow-lg">
         <h3 class="text-lg text-white font-semibold mb-2">Contact Number</h3>
-        <p class="text-white text-opacity-90 text-sm">9793026309 Shivansh Mehrotra (JYC President) </p>
-        <p class="text-white text-opacity-90 text-sm">8787085222 Ashish (Events Co-ordinator) </p>
+        <p class="text-white text-opacity-90 text-sm capitalize">9793026309 Shivansh Mehrotra (JYC President) </p>
+        <p class="text-white text-opacity-90 text-sm capitalize">8787085222 Ashish (Events Co-ordinator) </p>
       </div>
       <div class="bg-red-500 p-4 rounded-lg shadow-lg">
         <h3 class="text-lg text-white font-semibold mb-2">Email</h3>
-        <p class="text-white text-opacity-90 text-sm">president.jyc@juitsolan.in</p>
-        <p class="text-white text-opacity-90 text-sm">rohan0009u@gmail.com</p>
+        <p class="text-white text-opacity-90 text-sm lowercase">president.jyc@juitsolan.in</p>
+        <p class="text-white text-opacity-90 text-sm lowercase">rohan0009u@gmail.com</p>
       </div>
       </div>
     </div>
