--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="Css/countdown.css">
   <link rel="stylesheet" href="Css/footer.css">
   <link rel="stylesheet" href="Css/contact.css">
+  <link rel="stylesheet" href="Css/about us.css">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/x-icon" href="LF logo.jpg">
 </head>
@@ -105,9 +106,37 @@
       </div>
     </main>
   </section>
+  <section class="s-crossfit">
+		<div class="container-1">
+			<!-- <img src="photosc/ddd.webp" data-src="assets/img/group-circle-2.svg" alt="img" class="crossfit-icon-1 rx-lazy">
+			<img src="assets/img/placeholder-all.webp" data-src="assets/img/line-red-1.svg" alt="img" class="crossfit-icon-2 rx-lazy">
+			<img src="assets/img/placeholder-all.webp" data-src="assets/img/tringle-about-top.svg" alt="img" class="crossfit-icon-3 rx-lazy"> -->
+			<h2 class="text-3xl font-bold text-center text-zinc-800 dark:text-white mb-6"><button class="button">About Us</button></h2>
+			<p class="slogan"></p>
+			<div class="row">
+				<div class="col-md-4 crossfit-col">
+					<div class="crossfit-item">
+						<img class="rx-lazy" src="Images/logojyc.png" data-src="photosc/logojyc white1.webp" alt="img">
+						<h3>Juit Youth Club</h3>
+						<p>JUIT Youth Club (JYC) fosters holistic student development through sports, culture, academics, leadership, and extracurricular activities, promoting growth and unity.</p>
+						<a class="btn" href="https://jyc.co.in">About JYC</a>
+					</div>
+				</div>
+				<div class="col-md-4 crossfit-col">
+					<div class="crossfit-item">
+						<img class="rx-lazy" src="LF logo.png" data-src="photosc/parakarm.webp" alt="img">
+						<h3>le-fiestus</h3>
+						<p>Parakram, a thrilling sports event, brings together universities for competitive matches in football, basketball, volleyball, cricket, and more. Our university hosts the event, attracting students from all over to cheer for their teams.  </p>
+						<a class="btn" href="https://drive.google.com/file/d/1MRed--jHkJM1tfgcCh787N8OOiV1VtTY/view?usp=sharing">Download Brochure</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 <section class="contact" id="contact">
   <div class="max-w-md mx-auto py-8"> <!-- Added mx-auto class -->
-    <h2 class="text-3xl font-bold text-center text-zinc-800 dark:text-white mb-6">Contact Us</h2>
+    <h2 class="text-3xl font-bold text-center text-zinc-800 dark:text-white mb-6"><button class="button">Contact Us</button>
+    </h2>
     <div class="space-y-4">
       <div class="bg-cyan-500 p-4 rounded-lg shadow-lg">
         <h3 class="text-lg text-white font-semibold mb-2">Contact Address</h3>
