--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 			<div class="row">
 				<div class="col-md-4 crossfit-col">
 					<div class="crossfit-item">
-						<img class="rx-lazy" src="LF logo.png" data-src="photosc/parakarm.webp" alt="img">
+						<img class="rx-lazy" src="LF logo.png" alt="img">
 						<h3>le-fiestus</h3>
 						<p>Parakram, a thrilling sports event, brings together universities for competitive matches in football, basketball, volleyball, cricket, and more. Our university hosts the event, attracting students from all over to cheer for their teams.  </p>
-						<a class="btn" href="https://drive.google.com/file/d/1MRed--jHkJM1tfgcCh787N8OOiV1VtTY/view?usp=sharing">Download Brochure</a>
+						<a class="btn" href="https://drive.google.com/file/d/1kmNyq5oG_320C088rwnxVg0LOdLihug8/view?usp=sharing">Download Brochure</a>
 					</div>
 				</div>
 			</div>
