--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<div class="crossfit-item">
 						<img class="rx-lazy" src="LF logo.png" alt="img">
 						<h3>le-fiestus</h3>
-						<p>Parakram, a thrilling sports event, brings together universities for competitive matches in football, basketball, volleyball, cricket, and more. Our university hosts the event, attracting students from all over to cheer for their teams.  </p>
+						<p>Le-Fiestus is an annual extravaganza hosted by Jaypee University of Information Technology, bringing together students, faculty, and enthusiasts from across the nation to revel in the rich tapestry of Indian culture, art, and tradition. With each edition, we delve into a unique facet of Indian heritage, and this year, we proudly present "Horn, Ok Please" – a tribute to the colorful, bustling streets of yesteryears, echoing with the symphony of horns and the aroma of street food.</p>
 						<a class="btn" href="https://drive.google.com/file/d/1kmNyq5oG_320C088rwnxVg0LOdLihug8/view?usp=sharing">Download Brochure</a>
 					</div>
 				</div>
