--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="space-y-4">
       <div class="bg-cyan-500 p-4 rounded-lg shadow-lg">
         <h3 class="text-lg text-white font-semibold mb-2">Contact Address</h3>
-        <p class="text-white text-opacity-90 text-sm lowercase">Jaypee University of Information Technology,Waknaghat, P.O. Waknaghat, Teh Kandaghat, Distt. Solan PIN-173 234 (H.P.), India</p>
+        <p class="text-white text-opacity-90 text-sm capitalize">Jaypee University of Information Technology,Waknaghat, P.O. Waknaghat, Teh Kandaghat, Distt. Solan PIN-173 234 (H.P.), India</p>
       </div>
       <div class="bg-pink-500 p-4 rounded-lg shadow-lg">
         <h3 class="text-lg text-white font-semibold mb-2">Contact Number</h3>
